--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "axois": "^0.0.1-security",
     "bootstrap": "^5.3.2",
+    "ls": "^0.2.1",
     "lucide-react": "^0.331.0",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
@@ -25,7 +26,8 @@
     "react-redux": "^9.1.0",
     "reactflow": "^11.10.4",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
